// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video with description should render self 1`] = `
<li
  className="video withDescription"
  onClick={[Function]}
>
  <img
    alt="Professional Advice from Adobe MAX Conference"
    className="thumbnail"
    src="https://i.ytimg.com/hqdefault.jpg"
  />
  <div
    className="information"
  >
    <h3
      className="title css-truncate css-truncate-target"
    >
      Professional Advice from Adobe MAX Conference
    </h3>
    <span
      className="date"
    >
      a year ago
    </span>
    <span
      className="views"
    >
      5,463
       views
    </span>
    <p
      className="description"
    >
      I visited Adobe Max and asked all my design heroes for advice.
    </p>
  </div>
</li>
`;

exports[`Video without description should render self 1`] = `
<li
  className="video"
  onClick={[Function]}
>
  <img
    alt="Professional Advice from Adobe MAX Conference"
    className="thumbnail"
    src="https://i.ytimg.com/hqdefault.jpg"
  />
  <div
    className="information"
  >
    <h3
      className="title css-truncate css-truncate-target"
    >
      Professional Advice from Adobe MAX Conference
    </h3>
    <span
      className="date"
    >
      a year ago
    </span>
    <span
      className="views"
    >
      5,463
       views
    </span>
  </div>
</li>
`;
